src/objects/Legacy_Announcement__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_ExpirationDate__c</fullName>
        <label>Legacy ExpirationDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_FeedItemId__c</fullName>
        <label>Legacy FeedItemId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ParentId__c</fullName>
        <label>Legacy ParentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_SendEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy SendEmails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebuilt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebuilt?</label>
        <type>Checkbox</type>
    </fields>
    <label>Legacy Announcement</label>
    <nameField>
        <displayFormat>ANN-{0000}</displayFormat>
        <label>Legacy Announcement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>